# test-nrf-custom-commands

./: .gitignore  CMakeLists.txt  comms_board_revb.overlay  pm_static.yml  prj.conf  sample.yaml  test.js
boards/arm/comms_board_revb/: Kconfig.board  Kconfig.defconfig  comms_board_revb.dts  comms_board_revb.yaml  comms_board_revb_defconfig
boards/arm/test_nrf5340_net/: Kconfig.board  Kconfig.defconfig  board.cmake  test_nrf5340_net.dts  test_nrf5340_net.yaml  test_nrf5340_net_defconfig
boards/arm/test_nrf5340dk/: Kconfig.board  Kconfig.defconfig  test_nrf5340dk.dts  test_nrf5340dk.yaml  test_nrf5340dk_defconfig
include/: gpio.h  zb_zcl_modbus.h
src/: gpio.c  main.c  zb_zcl_modbus.c
